# AutoController

./: .gitignore  README.md
app/: package-lock.json  package.json  vite.config.ts
app/script/地平线6/: 刷技能点.txt
app/src/: App.vue  main.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: injector_main.rs  lib.rs  notify.rs
app/src-tauri/src/commands/: config_cmd.rs  controller_cmd.rs  injector_cmd.rs  log_cmd.rs  macro_cmd.rs  mod.rs  scheduler_cmd.rs  script_cmd.rs  select_region.ps1
app/src-tauri/src/config/: app_config.rs  mod.rs
app/src-tauri/src/controller/: mod.rs  state.rs  types.rs  vigem.rs
app/src-tauri/src/logger/: layer.rs  mod.rs  types.rs
app/src-tauri/src/macro_engine/: mod.rs  player.rs  recorder.rs  types.rs  xinput.rs
app/src-tauri/src/persistence/: mod.rs
app/src-tauri/src/scheduler/: mod.rs  queue.rs  types.rs
app/src-tauri/src/script_engine/: mod.rs  ocr.rs  runtime.rs  types.rs
app/src-tauri/src/system/: injector.rs  mod.rs  process.rs  tray.rs
app/src/components/: HelpModal.vue
app/src/components/controller/: DeviceCard.vue  StickVisualizer.vue  TriggerBar.vue
app/src/components/layout/: AppDialogs.vue  AppHeader.vue  AppSidebar.vue  StatusBar.vue
app/src/components/script/: CodeEditor.vue
app/src/composables/: useController.ts  useTauriEvent.ts  useTheme.ts
app/src/router/: index.ts
app/src/stores/: config.ts  controller.ts  log.ts  macro.ts  scheduler.ts  script.ts  ui.ts
app/src/styles/: base.css  variables.css
app/src/types/: config.ts  controller.ts  macro.ts  scheduler.ts  script.ts
app/src/views/: ConfigPanel.vue  DeviceMonitor.vue  LogViewer.vue  MacroControl.vue  NoFocusLoss.vue  NotificationConfig.vue  OcrViewfinder.vue  ScriptEditor.vue  TaskScheduler.vue
demo/: interactive_prototype.html
design-system/forzascript/: MASTER.md
docs/: CNAME  design.md  index.html  update-log.md
script/forza6/: 刷技能点999（需配合PaddleOCR）.txt
script/地平线6/: 自动升级熟练度6辆车（需配合PaddleOCR）.txt  蓝图买车斯巴鲁（需配合PaddleOCR）.txt
