[package]
name = "autocontroller"
version = "0.2.0"
description = "AutoController - 高性能游戏手柄宏录制与脚本化自动化工具"
authors = ["AutoController Team"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
dirs = "5"
toml = "0.8"
bitflags = "2"
libloading = "0.8"
rhai = { version = "1", features = ["sync", "internals", "metadata"] }
cron = "0.12"
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
    "Foundation_Collections"
] }
reqwest = { version = "0.12", features = ["json"] }


